# uniswap-routing

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/adapter/: graph.rs
src/application/: mod.rs  route_engine.rs
src/application/algos/: astar.rs  best_direct.rs  bfs.rs  circular.rs  dfs.rs  dijkstra.rs  mod.rs
src/domain/: types.rs
src/infra/: algo_selector.rs  mod.rs
src/port/: routing.rs
src/tests/: best_routes.rs  common.rs  integration.rs
