[package]
name = "uniswap-routing"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.10.0"
rust_decimal = { version = "1.37.1", features = ["macros"] }
rust_decimal_macros = "1.37.1"

[profile.dev]
debug = 1

[profile.release]
debug = 0
opt-level = 's'  # Optimize for size.
lto = true # Link Time Optimization (LTO)
codegen-units = 1 # Set this to 1 to allow for maximum size reduction optimizations:
panic = 'abort' # removes the need for this extra unwinding code.


[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[profile.release-lto]
inherits = "release"
lto = true
opt-level=3
codegen-units=1
